<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="state_free">여유</string>
    <string name="state_normal">보통</string>
    <string name="state_crowded">혼잡</string>
    <string name="very_crowded">매우 혼잡</string>

    <string name="title_activity_login">카자잇 관리자</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="do_login">로그인 하기</string>
    <string name="login_login">LOGIN</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">회원가입</string>
    <string name="id_example">아이디: 예) cazait123</string>
    <string name="dup_check">중복확인</string>
    <string name="password">비밀번호</string>
    <string name="password_double_check">비밀번호 확인</string>
    <string name="nickname">닉네임</string>
    <string name="phoneNumber">휴대폰 번호: 예) 01012345678</string>
    <string name="verificationCode">인증번호(6자리)</string>
    <string name="receive_code">인증번호받기</string>
    <string name="send_code">인증번호확인</string>
    <string name="do_sign_up">회원가입하기</string>
    <string name="cd_menu_button">메뉴 버튼</string>
    <string name="manage_store">카자잇 매장 관리</string>
    <string name="change_menu">메뉴 변경</string>
    <string name="change_store_background">가게 사진 추가/변경</string>
    <string name="change_store_desciption">가게 설명 추가/변경</string>
    <string name="user_profile_button">사용자 프로필 사진 버튼</string>
    <string name="cafe_image">가게 이미지</string>
    <string name="content_dis_new_store_picture">새로 등록될 가게 사진</string>
    <string name="register">등록하기</string>
    <string name="delete">삭제하기</string>
    <string name="notice">공지사항</string>
    <string name="cafe_menu">카페 메뉴</string>
    <string name="content_description_menu_image">메뉴 이미지</string>
    <string name="menu_price_hint">변경 이후 가격</string>
    <string name="submit_menu_setting_change_button">변경 요청</string>
    <string name="menu_description_change_hint">변경 이후 메뉴에 대한 설명. 30자 이내 작성</string>
    <string name="menu_description">메뉴 설명: $s</string>
    <string name="guide_revision_menu_success">메뉴가 성공적으로 변경되었습니다</string>

    <string name="cafe_preview">카페 프리뷰</string>
    <string name="manged_cafe_list">관리 중인 가게 목록</string>

    <string name="cafe_address_fix">카페 주소 변경</string>
    <string name="hint_cafe_address_fix">변경된 카페 주소를 적어주세요!!</string>
    <string name="apply_fix_button">적용하기</string>

    <string name="cafe_notice">공지사항 작성</string>
    <string name="hint_cafe_notice_title"> 제목을 적어주세요</string>
    <string name="hint_cafe_notice_content"> 내용을 적어주세요</string>
    <string name="apply_notice_button">작성 완료</string>
  
<!-- Error Message-->
    <string name="network_error_occurred">네트워크 오류가 발생했습니다.</string>
    <string name="data_not_found">올바르지 않은 요청입니다.</string>
    <string name="authorization_error_occurred">로그인 인증이 실패되었습니다.</string>
    <string name="invalid_input_error">입력된 정보가 잘못되었습니다.</string>
    <string name="unknown_error_occured">알 수 없는 에러가 발생했습니다.</string>

</resources>