<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/txt_cafe_address_fix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cafe_address_fix"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_cafe_address_fix"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_box"
            android:hint="@string/hint_cafe_address_fix"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_cafe_address_fix" />

        <Button
            android:id="@+id/btn_apply"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/apply_fix_button"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/edt_cafe_address_fix"
            app:layout_constraintStart_toStartOf="@+id/edt_cafe_address_fix"
            app:layout_constraintTop_toBottomOf="@+id/edt_cafe_address_fix" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>