<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/cazaitLogoImageView"
                    style="@style/TextValue_B"
                    android:layout_width="wrap_content"
                    android:layout_height="72dp"
                    android:gravity="center_vertical"
                    android:text="@string/manage_store"
                    android:textColor="@color/dark_choco"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/menuButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/cd_menu_button"
                    android:src="@drawable/ic_menu"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>


        <TextView
            android:id="@+id/tv_cafe_state"
            style="@style/TextValue_B"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textColor="@color/dark_choco"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout"
            tools:text="롬곡" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cafe_state_free"
            style="@style/CafeStateButton"
            android:layout_marginStart="80dp"
            android:layout_marginTop="160dp"
            android:background="@color/beige"
            android:text="@string/state_free"
            app:layout_constraintBottom_toTopOf="@+id/btn_cafe_state_crowded"
            app:layout_constraintEnd_toStartOf="@+id/btn_cafe_state_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_cafe_state" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cafe_state_normal"
            style="@style/CafeStateButton"
            android:layout_marginStart="22dp"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="80dp"
            android:background="@color/latte_beige"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/state_normal"
            app:layout_constraintBottom_toTopOf="@+id/btn_cafe_state_very_crowded"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_cafe_state_free"
            app:layout_constraintTop_toBottomOf="@+id/tv_cafe_state" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cafe_state_crowded"
            style="@style/CafeStateButton"
            android:layout_marginTop="22dp"
            android:background="@color/coffee"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/state_crowded"
            app:layout_constraintStart_toStartOf="@+id/btn_cafe_state_free"
            app:layout_constraintTop_toBottomOf="@+id/btn_cafe_state_free" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cafe_state_very_crowded"
            style="@style/CafeStateButton"
            android:layout_marginTop="22dp"
            android:background="@color/choco_tablet"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/very_crowded"
            app:layout_constraintEnd_toEndOf="@+id/btn_cafe_state_normal"
            app:layout_constraintTop_toBottomOf="@+id/btn_cafe_state_normal" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>