<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="org.cazait.presentation.ui.signin.SignInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/beige"
        android:padding="@dimen/fragment_margin">

        <ImageView
            android:id="@+id/iv_login_logo"
            android:layout_width="@dimen/login_logo_width"
            android:layout_height="@dimen/login_logo_height"
            android:layout_marginTop="@dimen/login_logo_marginTop"
            android:contentDescription="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/et_login_email"
            style="@style/LoginEditText"
            android:layout_marginTop="@dimen/login_input_marginTop"
            android:autofillHints="@string/login_email"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:text="@{viewModel.emailText}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_head"
            tools:text="cazait@caza.com" />

        <EditText
            android:id="@+id/et_login_password"
            style="@style/LoginEditText"
            android:layout_marginTop="@dimen/login_input_marginTop"
            android:autofillHints="@string/prompt_password"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:text="@{viewModel.passwordText}"
            android:textColorHint="@color/et_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_login_email" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login_do_login"
            style="@style/LoginButton"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="@dimen/login_button_marginTop"
            android:textColor="@color/white"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_login_password" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/et_login_password"
            app:layout_constraintStart_toStartOf="@+id/et_login_password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/tv_login_head"
            style="@style/TextValue_B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="52dp"
            android:text="@string/login"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/et_login_email"
            app:layout_constraintTop_toBottomOf="@+id/iv_login_logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_login_sign_up"
            style="@style/TextValue_B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login_do_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
